--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <section id="education" class="education-section">
       <div class="education-inner">
         <div class="edu-left">
-          <h2 class="heading small">Educations <span>&amp; Awards</span></h2>
+          <h2 class="heading small">Educations <span>&amp; Experience</span></h2>
           <p>
             There are some formal education & awards that I've reached below
           </p>
@@ -300,7 +300,7 @@
           <div class="project-layer">
             <h4>Web Design</h4>
             <p></p>
-            <a href="http://127.0.0.1:3000/denias.html#project"
+            <a href="https://deniasradityaa.github.io/Portofolioo-denias-raditya/"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
@@ -453,3 +453,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
